# backward_ros

./: CHANGELOG.rst  CMakeLists.txt  README.md  backward_rosConfig.cmake.in  package.xml
cmake/: BackwardConfig.cmake  BackwardConfigAment.cmake  BackwardConfigCatkin.cmake
include/backward_ros/: backward.hpp
src/: backward.cpp
test/: rectrace.cpp  select_signals.cpp  stacktrace.cpp  suicide.cpp  test.cpp
