<?xml version="1.0"?>
<package format="3">
  <name>backward_ros</name>
  <version>1.0.3</version>
  <description>The backward_ros package is a ros wrapper of backward-cpp from https://github.com/bombela/backward-cpp </description>

  <maintainer email="victor.lopez@pal-robotics.com">Victor López</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/pal-robotics/backward_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libdw-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
